@@ -1,7 +1,8 @@
 2021-04-18 Dusan Jocic <dusanjocic@msn>
-	* [Convar] Decreased size of MAX_CVAR_VALUE_STRING to 256
+	* [Convars] Decreased size of MAX_CVAR_VALUE_STRING to 256
 	* [Misc] Moved astyle files to the proper folder
 	* [Server] Try to send partial snapshots if a snapshot message would otherwise overflow
+	* [Convars] Resend serverinfo / userinfo cvar when it is registered
 
 2021-04-11 dGr8LookinSparky <hissparkyness@gmail.com>
 	* [Client]Fix the mouse sensitivity for when cl_mouseAccel is disabled.
